--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,57 @@ h1 {
     font-family: 'Bungee';
     font-size: 30px;
 }
+p.font-42 {
+    font-size: 42px;
+    color: cyan;
+    font-weight: bolder;
+}
+span.font-crazy {
+    font-weight: 900;
+    font-family: 'Caveat', cursive;
+    font-size: 50px;
+    /* llamando un color por su nombre */
+    color: deeppink;
+}
+p {
+    font-size: 3em;
+}
+.color-greenyellow {
+    color: greenyellow;
+}
+.color-avianca {
+    color: rgb(22,20,200)
+}
+.color-limagreen{
+    color: #32cd32;
+}
+.color-platzy {
+    color: rgb(18,31,64);
+
+}
+.color-platzy2 {
+    color: rgb(191,11,250);
+}
+.color-mercado {
+    color: rgb(255,242,0);
+}
+.espaciado-letra {
+    letter-spacing: 0.1em;
+}
+.espaciado-palabras {
+    word-spacing: 3em;
+}
+.espaciado-lineas {
+    line-height: 4em;
+}
+h2 {
+    font-size: 64px;
+}
+
+
+
+
+
 /* bungee-regular - latin */
 @font-face {
     font-family: 'Bungee';
